# decentralized_state_machine

./: .env.template  .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER.md  INSTALL.md  LICENSE.md  README.md  RELEASE-TEMPLATE.md  RELEASE_PROCESS.md  SECURITY.md  STORAGE_NODE_SETUP.md  TOOLCHAIN.md  cargo.toml  config.toml  deny.toml  docker-compose.yml  dsm_client_config.json  fix-gpg-signing.sh  fix_authorization_errors.py  fix_dsm_errors.py  fix_errors.patch  fix_storage_client.sh  ip-snapshot-fixes.sh  rustfmt.toml  storage_node_config.toml  submit_data.sh  test_api.sh  test_epidemic_storage.sh  test_storage.sh  token_balance_fix.patch
dsm/: CONTRIBUTING.md  Cargo.toml  Dockerfile  FIXES_SUMMARY.md  LICENSE.md  README.md  SERDE_MACRO_HANDLING.md  WHITEPAPER.md  build.rs
dsm-ethereum-bridge/: Cargo.toml  Dockerfile
dsm-ethereum-bridge/relayer/: eth_dsm_relayer.ts
dsm-ethereum-bridge/src/: dsm_anchor_handler.rs  state_management.rs
dsm-sdk/: Cargo.toml
dsm-sdk/examples/: pokemon_bluetooth_trade.rs
dsm-sdk/src/: lib.rs  trade.html
dsm-sdk/src/sdk/: bluetooth_transport.rs  contact_sdk.rs  core_sdk.rs  identity_sdk.rs  mod.rs  pokemon_bluetooth_sdk.rs  pokemon_sdk.rs  protocol_metrics.rs  smart_commitment_sdk.rs  token_sdk.rs
dsm-storage-node/: Cargo.toml  config.toml
dsm-storage-node/src/: lib.rs  main.rs  network.rs
dsm-storage-node/src/api/: handlers.rs  middleware.rs  mod.rs  mpc_api.rs  rewards_api.rs  unilateral.rs  unilateral_api.rs  vault.rs  vault_api.rs
dsm-storage-node/src/client/: mod.rs  mod.rs.bak
dsm-storage-node/src/config/: mod.rs
dsm-storage-node/src/crypto/: mod.rs
dsm-storage-node/src/encryption/: mod.rs
dsm-storage-node/src/error/: mod.rs
dsm-storage-node/src/network/: mod.rs
dsm-storage-node/src/staking/: mod.rs  rewards.rs  subscription.rs
dsm-storage-node/src/storage/: README.md  digest.rs  distributed_storage.rs  epidemic_storage.rs  health.rs  memory_storage.rs  metrics.rs  mod.rs  partition.rs  reconciliation.rs  routing.rs  small_world.rs  tasks.rs  topology.rs  vector_clock.rs
dsm-storage-node/src/storage/tests/: epidemic_integration.rs
dsm-storage-node/src/types/: mod.rs  storage_types.rs
dsm/benches/: README.md  bench.rs  concurrency_fix_test.rs  concurrent_verification.rs  correct_benchmark.rs  crypto_benchmark.rs  cryptography.rs  direct_bench.rs  memory_profile.txt  memory_profile_benchmark.txt  micro_benchmark.rs  network_operations.txt  network_transport_benchmark.txt  performance_analysis.rs  quantum_crypto_benchmark.rs  recovery_mechanisms_benchmark.rs  recovery_performance.txt  serialization_metrics.rs  state_transition_benchmark.rs  state_transitions.rs  storage_io_benchmark.rs  timing_analysis.rs  token_operations.rs  tps_bench.rs  transition_benchmark.rs
dsm/docs/: DSMOnboarding.md
dsm/examples/: start_storage_nodes.rs  user_genesis_creation.rs
dsm/licensing/: LICENSE-THIRD-PARTY.md
dsm/src/: lib.rs  main.rs
dsm/src/api/: batch_api.rs  external_commitment_api.rs  hashchain_api.rs  identity_api.rs  mod.rs  token_api.rs
dsm/src/commitments/: deterministic.rs  external_commitment.rs  mod.rs  parameter_comparison.rs  precommit.rs  smart_commitment.rs
dsm/src/common/: mod.rs  mod_test.rs  tests.rs
dsm/src/communication/: crypto_net.rs  directory.rs  init.rs  manager.rs  mod.rs  nfc.rs  p2p.rs  storage_cache.rs  storage_client.rs  storage_client.rs.bak
dsm/src/communication/protocol/: dsm_protocol.rs  mod.rs
dsm/src/communication/transport/: bluetooth_connect.rs  mod.rs  secure_udp.rs  tls.rs
dsm/src/core/: debug_helpers.rs  mod.rs
dsm/src/core/entropy/: deterministic_entropy.rs  mod.rs
dsm/src/core/identity/: genesis.rs  hierarchical_device_management.rs  mod.rs
dsm/src/core/index/: mod.rs
dsm/src/core/security/: bilateral_control.rs  manipulation_resistance.rs  mod.rs
dsm/src/core/state_machine/: batch.rs  batch_proof.rs  bilateral.rs  checkpoint.rs  genesis.rs  genesis_state.rs  hashchain.rs  hashchain_extension.rs  mod.rs  random_walk.rs  relationship.rs  state.rs  state_projection.rs  sync_manager.rs  transition.rs  transition_fix.rs  transition_fix_test.rs  utils.rs  validation.rs
dsm/src/core/sync/: bilateral_sync.rs
dsm/src/core/token/: mod.rs  token_factory.rs  token_registry.rs  (+1 more)
dsm/src/cpta/: CTPA_OPTIMIZATION.md  README.md  default_policy.rs  mod.rs  policy_store.rs  policy_verification.rs
dsm/src/crypto/: blake3.rs  cryptographic_verification.rs  hash.rs  kyber.rs  mod.rs  pedersen.rs  random_walk_privacy.rs  rng.rs  signatures.rs  sphincs.rs
dsm/src/crypto_verification/: crypto_identity.rs  cryptographic_identity.rs  deterministic_verification.rs  mod.rs  multiparty_computation.rs  quantum_resistant_binding.rs  storage_integration_test.rs
dsm/src/identity/: anchor.rs  device.rs  mod.rs
dsm/src/interfaces/: external_commit_face.rs  identity_face.rs  mod.rs  network_face.rs  storage_face.rs  token_face.rs  verification_face.rs
dsm/src/merkle/: mod.rs  sparse_merkle_tree.rs  tree.rs
dsm/src/policy/: CTPA_OPTIMIZATION.md  default_policy.rs  mod.rs  policy_store.rs  policy_types.rs  policy_verification.rs
dsm/src/recovery/: invalidation.rs  mnemonic.rs  mod.rs
dsm/src/types/: error.rs  general.rs  identity.rs  mod.rs  operations.rs  policy_types.rs  state_builder.rs  state_types.rs  token_types.rs
dsm/src/unilateral/: inbox.rs  mod.rs
dsm/src/utils/: file.rs  mod.rs  serialization.rs  time.rs
dsm/src/vault/: asset_manager.rs  condition.rs  dlv_manager.rs  fulfillment.rs  limbo_vault.rs  mod.rs
dsm/tests/: bilateral_state_isolation_test.rs  commitment_integration_test.rs  direct_state_verification_test.rs  dsm_end_to_end_test.rs  hashchain_verification_test.rs
ip_snapshot/: Cargo.toml  config.json  run_server.sh  run_simple_scanner.sh
ip_snapshot/src/: config.rs  main.rs  types.rs
ip_snapshot/src/geolocation/: mod.rs
ip_snapshot/src/ip_collector/: scanner.rs
ip_snapshot/src/persistence/: exporter.rs  snapshot_store.rs
(+198 files in other folders)
