[package]
name = "dsm-ethereum-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
dsm = { path = "../dsm" }
dsm-storage-node = { path = "../dsm-storage-node" }
tokio = { version = "1.36", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }   
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
sha3 = "0.10"
hex = "0.4"
parking_lot = "0.12"
bincode = "1.3"
chrono = "0.4"
tracing-subscriber = "0.3.19"

[dev-dependencies]
# You can add dev/test dependencies here if desired
