[package]
name = "dsm-sdk"
version = "0.1.0"
edition = "2021"
description = "Distributed State Machine Software Development Kit"
repository = "https://github.com/dsm-project/decentralized-state-machine"
license = "MIT OR Apache-2.0"

[lib]
name = "dsm_sdk"
path = "src/lib.rs"

[[bin]]
name = "dsm-sdk"
path = "src/main.rs"

[features]
default = ["bluetooth"]
bluetooth = ["tokio-stream"]

[[example]]
name = "pokemon_bluetooth_trade"
path = "examples/pokemon_bluetooth_trade.rs"
required-features = ["bluetooth"]

[dependencies]
# Core dependencies
dsm = { path = "../dsm" }
# Core numeric processing
num-bigint = { version = "0.4.6", features = ["serde"] }
num-traits = "0.2.17"
num-integer = "0.1.46"
num-primes = "0.3.0"

# Async runtime
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "time", "fs", "io-util", "sync", "net", "signal"] }
async-trait = "0.1.77"
futures = { version = "0.3.30", default-features = false, features = ["std", "executor"] }

# Error handling
thiserror = "1.0.57"
anyhow = "1.0.80"

# CLI
clap = { version = "4.5.4", features = ["derive"] }

# Serialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
bincode = "1.3.3"
postcard = { version = "1.0.8", features = ["alloc"] }
serde_with = { version = "3.6.1", features = ["hex"] }

# QR code dependencies removed due to fundamental incompatibility with SPHINCS+ signatures
# SPHINCS+ signatures (7KB-35KB) exceed maximum QR code capacity (~3KB for Version 40 with low ECC)

# Cryptography - core
blake3 = "1.5.0"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
hmac = "0.12.1"
sha3 = "0.10.8"
rand = "0.8.5"
rand_chacha = "0.3.1"
getrandom = "0.2.12"
merlin = "3.0.0"
zeroize = { version = "1.7.0", features = ["zeroize_derive"] }
subtle = "2.5.0"
constant_time_eq = "0.3.0"
# Security-hardened cryptographic primitives
ring = { version = "0.17.14", features = ["std"] }
ff = "0.13.0"

# Quantum-resistant cryptography
pqcrypto-traits = { version = "0.3.5", features = ["std"] }
pqcrypto-mlkem = "0.1.0"  # Kyber KEM implementation
pqcrypto-sphincsplus = { version = "0.7.0", features = ["std"] }

# Networking
rustls = { version = "0.21.10", features = ["dangerous_configuration"] }
rustls-pki-types = "0.2.1"
webpki = "0.22.2"
reqwest = { version = "0.12.2", default-features = false, features = ["rustls-tls", "json"], optional = true }
rcgen = "0.12" # For certificate generation
tokio-rustls = "0.24"

# Bluetooth support (optional)
tokio-stream = { version = "0.1.14", optional = true, features = ["sync"] }

# Storage
rocksdb = { version = "0.21.0", features = ["multi-threaded-cf"] }

# Compression
flate2 = "1.0.28"  # For serialization_metrics benchmark

# Metrics and instrumentation
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"

# FFI (optional)
jni = { version = "0.21.1", optional = true }

# Bluetooth benchmark dependencies
fastrand = "2.0.1"

# Utilities
chrono = { version = "0.4.31", features = ["serde", "clock"], default-features = false }
bip39 = { version = "2.0.0", features = ["serde"] }
once_cell = "1.19.0"
hex = "0.4.3"
log = "0.4.20"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
erased-serde = "0.4.1"
bytes = "1.5.0"
tokio-util = { version = "0.7.10", features = ["codec"] }
bitvec = "1.0.1"
lazy_static = "1.4.0"
parking_lot = { version = "0.12.1", features = ["serde"] }
zerocopy = "0.7.35"
base64 = "0.22.1"
dirs = "5.0.1"
bitflags = "2.4.2"
arrayref = "0.3.9"
aes-gcm = "0.10.3"
argon2 = "0.5.3"
time = { version = "0.3.41", features = ["macros"] }
core-foundation = "0.10.0"
object = "0.36.7"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }
mockall = "0.12.1"
tempfile = "3.10.0"
test-log = { version = "0.2.14", features = ["trace"] }
proptest = "1.4.0"
quickcheck = "1.0.3"
rstest = "0.18.2"
serial_test = "3.0.0"