[package]
name = "dsm-storage-node"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Storage node for the Decentralized State Machine (DSM)"

[dependencies]
dsm = { path = "../dsm" }
url = "2.4.1"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.48"
blake3 = "1.4.0"
clap = { version = "4.4.3", features = ["derive"] }
pqcrypto-mlkem = "0.1.0"
pqcrypto-sphincsplus = { version = "0.7.0", features = ["std"] }
pqcrypto-traits = { version = "0.3.5", features = ["std"] }
chacha20poly1305 = "0.10.1"
sha3 = "0.10.8"
rand = "0.8.5"
rand_chacha = "0.3.1"
axum = { version = "0.6.20", features = ["macros"] }
reqwest = { version = "0.11.20", features = ["json"] }


rusqlite = { version = "0.29.0", features = ["bundled"] }
zeroize = "1.6.0"
base64 = "0.21.4"
dashmap = "5.5.3"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["trace"] }
config = "0.13.3"
lazy_static = "1.4.0"
async-trait = "0.1.73"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
toml = "0.8.20"
parking_lot = "0.12.1"
bytes = "1.10.1"
futures = "0.3.31"
chrono = "0.4.40"
aes-gcm = "0.10.3"
bincode = "1.3.3"
hex = "0.4.3"
sysinfo = "0.30" # Or the latest compatible version
anyhow = "1.0.75"

[features]
default = ["reqwest"]
reqwest = []