[package]
name = "ip_snapshot"
version = "0.1.0"
edition = "2021"
authors = ["DSM Team"]
description = "Automated global residential IP address scanning and collection system"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
axum = "0.6.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Removed compression feature which isn't available
tower-http = { version = "0.4", features = ["trace", "cors"] }
hyper = "0.14"
tower = "0.4"
maxminddb = "0.23"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
rand = "0.8"
futures = "0.3"
futures-util = "0.3"
thiserror = "1.0"
anyhow = "1.0"
blake3 = "1.4"
base64 = "0.21"
dashmap = "5.4"
clap = { version = "4.3", features = ["derive"] }
hex = "0.4"
rustls = "0.21"
rustls-pemfile = "1.0"
semaphore = "0.4"
bytes = "1.4"
sha3 = "0.10"
byteorder = "1.4"
cidr = "0.2"
parking_lot = "0.12"
ipnetwork = "0.20"
ip_network = "0.4"
ip_network_table-deps-treebitmap = "0.5"
socket2 = "0.5"
iana-time-zone = "0.1"
num_cpus = "1.15"
async-stream = "0.3"
hickory-resolver = "0.24"
ratelimit_meter = "5.0"
once_cell = "1.17"
time = "0.3"
hex-literal = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
prometheus = "0.13"
deadpool = "0.9"
memmap2 = "0.6"
tempfile = "3.7"
csv = "1.2"
walkdir = "2.3"
getrandom = "0.2"
rustc-hash = "1.1"

# DSM crates
dsm = { path = "../dsm" }
dsm_sdk = { path = "../dsm_sdk" }
lazy_static = "1.5.0"
